Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#3673 closed defect (fixed)

video-stream not recognized

Reported by: doublemax Owned by:
Priority: normal Component: avformat
Version: git-master Keywords: flv h264 analyzeduration
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Problem: ffmpeg makes audio out of video

ffmpeg commandline (simplified):
ffmpeg -i http://doppelbauer.name/no-video-stream.flv -vcodec wmv2 -acodec wmav2 /tmp/test.wmv
(version: ffmpeg version 2.2.1)

Mplayer plays this video without problems:
mplayer http://doppelbauer.name/no-video-stream.flv
(version: MPlayer2 2.0-701-gd4c5b7f-2ubuntu2)

Attachments (1)

no-video-stream_cut.flv (2.4 MB ) - added by Carl Eugen Hoyos 12 years ago.

Change History (10)

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: video stream removed

Please test current FFmpeg git head and post the failing command line together with the complete, uncut console output to make this a valid ticket.

comment:2 by doublemax, 12 years ago

Same problem with ffmpeg-git.
ffmpeg transcodes the video-file to a"wma" audio file (same problem with other codecs).

ffmpeg -i ​http://doppelbauer.name/no-video-stream.flv -vcodec wmv2 -acodec wmav2 /tmp/test.wmv
fmpeg version N-63439-g96470ca Copyright (c) 2000-2014 the FFmpeg developers
  built on May 26 2014 10:27:21 with gcc 4.8 (Ubuntu 4.8.2-19ubuntu1)
  configuration: --prefix=/usr/local --enable-gpl --enable-version3 --enable-nonfree --enable-bzlib --enable-zlib --enable-libx264 --enable-libvpx --enable-libmp3lame --enable-libfdk-aac
  libavutil      52. 86.100 / 52. 86.100
  libavcodec     55. 65.100 / 55. 65.100
  libavformat    55. 41.100 / 55. 41.100
  libavdevice    55. 13.101 / 55. 13.101
  libavfilter     4.  5.100 /  4.  5.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[flv @ 0x2e96c20] Could not find codec parameters for stream 0 (Video: h264, 900 kb/s): unspecified size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, flv, from '/home/markus/queue-561319-1.flv':
  Metadata:
    genre           : Video
    title           : p-son710
    artist          : MacX Video Converter Pro
    encoder         : Lavf54.63.104
  Duration: 02:17:57.17, start: 0.000000, bitrate: 953 kb/s
    Stream #0:0: Video: h264, 900 kb/s, 1k tbr, 1k tbn, 1k tbc
    Stream #0:1: Audio: mp3, 44100 Hz, stereo, s16p, 64 kb/s
Output #0, asf, to '/tmp/test.wmv':
  Metadata:
    WM/Genre        : Video
    title           : p-son710
    Author          : MacX Video Converter Pro
    WM/EncodingSettings: Lavf55.41.100
    Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, stereo, fltp, 128 kb/s
    Metadata:
      encoder         : Lavc55.65.100 wmav2
Stream mapping:
  Stream #0:1 -> #0:0 (mp3 -> wmav2)
Press [q] to stop, [?] for help
size=    7148kB time=00:07:04.78 bitrate= 137.8kbits/s    
video:0kB audio:6638kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 7.683195%

in reply to:  2 comment:3 by Carl Eugen Hoyos, 12 years ago

Keywords: flv h264 added
Resolution: wontfix
Status: newclosed
Version: 2.2.2git-master

Replying to doublemax:

[flv @ 0x2e96c20] Could not find codec parameters for stream 0 (Video: h264, 900 kb/s): unspecified size
Consider increasing the value for the 'analyzeduration' and 'probesize' options

What is unclear about this message?

Please understand that we have received many requests to reduce the minimum analyzeduration (particularly for network input!) and it should be easy to create a sample that needs more than 7M so the default value will always be a compromise afaict.

Please reopen if you believe that I am wrong.

comment:4 by doublemax, 12 years ago

I have tried to adapt 'analyzeduration' and 'probesize' - it didn't help.
The network-input is done for simplification.

Maybe a better commandline to demonstrate this issue:

cd /tmp
wget 'http://doppelbauer.name/no-video-stream.flv'
ffmpeg -analyzeduration 999999 -probesize 2147483647 -i /tmp/no-video-stream.flv -vcodec wmv2 -acodec wmav2 /tmp/error.wmv

comment:5 by doublemax, 12 years ago

Resolution: wontfix
Status: closedreopened

in reply to:  4 comment:6 by Carl Eugen Hoyos, 12 years ago

Resolution: wontfix
Status: reopenedclosed

Replying to doublemax:

ffmpeg -analyzeduration 999999

This would be less then default iirc, you need 7M

by Carl Eugen Hoyos, 12 years ago

Attachment: no-video-stream_cut.flv added

comment:7 by doublemax, 12 years ago

You are right - sorry for disturbing.

in reply to:  7 comment:8 by Carl Eugen Hoyos, 12 years ago

Keywords: analyzeduration added

Replying to doublemax:

You are right - sorry for disturbing.

Note that I may simply be wrong and libavformat may be able to see that it just needs a little more analyzing to get the missing information.
But FFmpeg currently correctly reports that you need to increase a value on the command line to be able to decode the stream.

This is apparently a duplicate of ticket #218

comment:9 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: wontfixfixed

"Fixed" in e6a084641aada7a2e4672172f2ee26642800a361
if this causes worse startup delay for some streams that otherwise dont need it then please open a ticket

Note: See TracTickets for help on using tickets.