avformat/utils: set max analyze duration depending on the circumstances

Fixes Ticket3673

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>